[metadata]
name = xjdp
version = attr: xjdp.__version__
author = Fionn Fitzmaurice
description = Object oriented features in Xinjiang
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/fionn/xjdp"
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
zip_safe = true
pymodules = xjdp
packages = find:
python_requires = >=3.8
install_requires =
    requests

[options.extras_require]
dev =
    pylint
    mypy
